# kuka_interface_packages

./: README.md  Tool_calibration_params.txt
FRILibrary_ros/: .bzrignore  .gitignore  CMakeLists.txt  FRILibrary_ros.in  mainpage.dox  package.xml
FRILibrary_ros/include/: Console_FRI.h  DataLogging.h  FastResearchInterface.h  FastResearchInterfaceTest.h  LWRBaseControllerInterface.h  LWRJointPositionController.h  OSAbstraction.h  friremote.h  friudp.h  old_friComm.hello
FRILibrary_ros/src/: Console.cpp  FastResearchInterface.cpp  GetRobotControlData.cpp  GetRobotStatusData.cpp  GetUDPCommunicationData.cpp  KRCCommunicationThreadMain.cpp  ReadInitFile.cpp  SetControlScheme.cpp  SetRobotControlData.cpp  SetRobotStatusData.cpp  StartRobot.cpp  StopRobot.cpp  friudp.cpp
kuka_fri_bridge/: CMakeLists.txt  package.xml  run_lwr.sh
kuka_fri_bridge/RobotStatePublisher/include/: RobotStatePublisher.h
kuka_fri_bridge/RobotStatePublisher/src/: RobotStatePublisher.cpp
kuka_fri_bridge/RobotStateSubscriber/include/: RobotStateSubscriber.h
kuka_fri_bridge/RobotStateSubscriber/src/: RobotStateSubscriber.cpp  RobotStateSubscriber.cpp.autosave
kuka_fri_bridge/config/: KUKABridge.xml  KUKABridge_left.xml  KUKABridge_right.xml  KUKAMirror.xml  KUKAMirror_back.xml
kuka_fri_bridge/msg/: JointStateImpedance.msg
lwr_interface/: CMakeLists.txt  package.xml
lwr_interface/config/: KUKABasic.xml
lwr_interface/include/: LWRCore.h
lwr_interface/src/: LWRCore.cpp  main.cpp
rtk_mirror/: CMakeLists.txt  package.xml  run_lwr.sh
rtk_mirror/RobotStatePublisher/include/: RobotStatePublisher.h
rtk_mirror/RobotStatePublisher/src/: RobotStatePublisher.cpp
rtk_mirror/RobotStateSubscriber/include/: RobotStateSubscriber.h
rtk_mirror/RobotStateSubscriber/src/: RobotStateSubscriber.cpp
rtk_mirror/config/: KUKAMirror.xml
